# RUCHE

./: .gitattributes  LICENSE  README-template.md  README.md  app.py  main.py  mcp_server.py  pyproject.toml  robot.py
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.github/linters/: .markdown-lint.yml
.github/workflows/: check-file-size.yml  linter.yml  sync-to-hf.yml
arduino/elegoo-car/: elegoo-car.ino
docs/: howto-configure-github-secrets.md  howto-configure-github-workflows.md  howto-run-chatbot-in-devcontainer.md  ruche-arch-draft01.excalidraw.json
docs/images/: 2025-11-23-test.excalidraw.json
ros2_pkg/: .gitignore  README.md
ros2_pkg/src/ros_bt_bridge/: README.md  __init__.py  package.xml  setup.cfg  setup.py
ros2_pkg/src/ros_bt_bridge/ros_bt_bridge/: ros_bt_bridge.py
ros2_pkg/src/ruche_ros2_control/: CMakeLists.txt  elegoo_bt2serial.xml  package.xml  setup.cfg  setup.py
ros2_pkg/src/ruche_ros2_control/bringup/config/: diffelegoo_controllers.yaml
ros2_pkg/src/ruche_ros2_control/bringup/launch/: diffelegoo.launch.py  robot.launch.py
ros2_pkg/src/ruche_ros2_control/description/ros2_control/: diffelegoo.ros2_control.xacro  diffelegoo_gazebo.xacro
ros2_pkg/src/ruche_ros2_control/description/rviz/: rviz_conf.rviz
ros2_pkg/src/ruche_ros2_control/description/urdf/: diffelegoo_params.xacro  robot.urdf.xacro
ros2_pkg/src/ruche_ros2_control/description/utils/: diffelegoo_materials.xacro  inertial_calculations.xacro
ros2_pkg/src/ruche_ros2_control/hardware/: elegoo_bt2serial.cpp
ros2_pkg/src/ruche_ros2_control/hardware/include/: elegoo_bt2serial.hpp  visibility_control.h
ros2_pkg/src/ruche_ros2_control/hardware/include/ruche_ros2_control/: elegoo_bt2serial.hpp
ros2_pkg/src/ruche_ros2_control/worlds/: empty.sdf
scripts/: install_ros2_dep.sh  install_tools.sh
